feat: cleanWarns script and fix time zone

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - '3306:3306'
     environment:
       MYSQL_ROOT_PASSWORD: 123
+      TZ: 'Asia/Bangkok'
     volumes:
       - ./mysql-data:/var/lib/mysql
   phpMyAdmin:
