--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mjml": "^4.15.3",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.4",
     "util": "^0.12.5",
     "uuid": "^9.0.0"
